--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "@types/react-bootstrap": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
-    "eslint": "^6.6.0",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.0"
   }
