--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "node-sass": "^4.14.1",
+    "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -30,7 +31,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "use-query-params": "^1.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
