--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "connected-react-router": "^6.8.0",
     "query-string": "^6.13.5",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-query": "^2.26.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-toastify": "^6.0.5",
+    "react-use": "^15.3.4",
+    "recharts": "^1.8.5",
     "use-query-params": "^1.1.8"
   },
   "scripts": {
@@ -46,23 +49,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
+    "@types/react-bootstrap": "^1.0.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-toastify": "^4.1.0",
-    "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.10",
-    "@types/react-bootstrap": "^1.0.1",
+    "@types/recharts": "^1.8.16",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.0",
-    "typescript": "^4.0.3",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "react-query-devtools": "^2.6.3",
+    "typescript": "^4.0.3"
   }
 }
