--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy:dev": "copyfiles -u 1 build/**/* ../modules/app/target/classes/public/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -62,6 +63,7 @@
     "@types/recharts": "^1.8.16",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "copyfiles": "^2.4.1",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
